# missiond

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  semantic-terminal.yml
crates/missiond-attach/: Cargo.toml
crates/missiond-attach/src/: lib.rs  main.rs
crates/missiond-core/: Cargo.toml
crates/missiond-core/src/: lib.rs  skill.rs  types.rs
crates/missiond-core/src/cc_tasks/: mod.rs  parser.rs  types.rs  watcher.rs
crates/missiond-core/src/core/: inbox.rs  mission_control.rs  mod.rs  permission.rs  process_manager.rs  slot_manager.rs
crates/missiond-core/src/db/: mod.rs
crates/missiond-core/src/ipc/: mod.rs
crates/missiond-core/src/pty/: extractor.rs  manager.rs  mod.rs  screenshot.rs  session.rs
crates/missiond-core/src/semantic/: confirm.rs  mod.rs  state.rs  status.rs  tool.rs  types.rs
crates/missiond-core/src/sync/: client.rs  mod.rs  relay.rs
crates/missiond-core/src/ws/: jarvis_trace.rs  mod.rs  screenshot_broker.rs  server.rs
crates/missiond-daemon/: Cargo.toml
crates/missiond-daemon/src/: events_sync.rs  main.rs
crates/missiond-mcp/: Cargo.toml
crates/missiond-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/missiond-runner/: Cargo.toml
crates/missiond-runner/src/: lib.rs  runner.rs  types.rs
crates/semantic-terminal-napi/: Cargo.toml
crates/semantic-terminal-napi/src/: lib.rs
docs/designs/: infra-data-security.md  jarvis-kb.md  jarvis-memory-system.md  self-transfer.md  tunnel-anti-gfw.md  user-voice-extraction.md
