[package]
name = "missiond-daemon"
description = "Singleton missiond daemon (task queue + PTY + WS + MCP IPC)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "missiond"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }

missiond-core = { workspace = true }
missiond-mcp = { workspace = true }

